@@ -338,10 +338,29 @@
 				startWidgetPositioning($(event.target), data);
 			},
 			resize: function(event, ui) {
+				// Hack for Safari to manually accept parent container height in pixels on widget resize.
+				if (SF) {
+					$.each(data['widgets'], function() {
+						if (this.type === 'clock' || this.type === 'sysmap') {
+							this.content_body.find(':first').height(this.content_body.height());
+						}
+					});
+				}
+
 				doWidgetPositioning($obj, $(event.target), data);
 			},
 			stop: function(event, ui) {
 				stopWidgetPositioning($obj, $(event.target), data);
+
+				// Hack for Safari to manually accept parent container height in pixels when done widget snapping to grid.
+				if (SF) {
+					$.each(data['widgets'], function() {
+						if (this.type === 'clock' || this.type === 'sysmap') {
+							this.content_body.find(':first').height(this.content_body.height());
+						}
+					});
+				}
+
 				doAction('onResizeEnd', $obj, data, widget);
 			}
 		});
